# package_example

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: release.yaml
src/maotek/: __init__.py  __main__.py  main.py
