# Copyright (c) 2025 maotek
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
[tool.hatch.version]
source = "vcs"
[tool.hatch.build.hooks.vcs]
version-file = "src/maotek/_version.py"


[project]
name = "maotek"
dynamic = ["version"]
description = "An example of Python application distribution."
authors = [
    { name = "maotek", email = "kazoo8043@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[project.scripts]
maotek = "maotek.main:app"

[project.urls]
Referencepage = "https://dev.to/jphutchins/building-a-universally-portable-python-app-2gng"
Referencepage2 = "https://github.com/urllib3/urllib3"
Repository = "https://github.com/maotek/package_example"

